--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/progress-view": "^1.2.3",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "link": "^0.1.5",
     "native-base": "2.13.8",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.63.4",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1"
+    "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
